// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Array > ArrayDynamicComponent renders 1`] = `
<div>
  <div
    class="css-wng87c-ArrayDynamicComponent"
  />
</div>
`;

exports[`Array > ArrayStatic renders 1`] = `
<div>
  <section
    class="css-1q3many-ArrayStatic"
  />
</div>
`;

exports[`Array > SequenceDynamicComponent renders 1`] = `
<div>
  <div
    class="css-1sseztl"
  />
</div>
`;
